--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               <img class="navbar-brand" src="./logo.png" alt="LOGO">
             </a>
           </li>
-          <li class="nav-item card">
+          <li class="nav-item card userCard">
             <a class="nav-link" href="#">
               <img class="card-img-top" src="./user.png" alt="USER">
               <div class="card-body">
